Vertically stack bottom buttons if viewport is narrow to avoid text being cut off

--- a/src/components/bottom-buttons.scss
+++ b/src/components/bottom-buttons.scss
@@ -12,6 +12,25 @@
     text-transform: uppercase;
   }
 
+  @media only screen and (max-width: 820px) {
+    .bottom-buttons-btns {
+      display: block!important;
+      a {
+        margin-bottom: 32px!important;
+      }
+    }
+  }
+
+  @media only screen and (max-width: 420px) {
+    .bottom-buttons-btns {
+      display: block!important;
+      a {
+        margin-bottom: 32px!important;
+        font-size: 30px!important;
+      }
+    }
+  }
+
   .bottom-buttons-btns {
     display: flex;
     justify-content: center;
@@ -70,4 +89,3 @@
     }
   }
 }
-
